<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15E27e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QPr-o7-d5y">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
    </dependencies>
    <scenes>
        <!--ToDo List-->
        <scene sceneID="dD7-6v-TCD">
            <objects>
                <tableViewController title="ToDo List" id="xS7-9y-nSW" customClass="TableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="bzW-VS-Ugt">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="toDoListCell" textLabel="qp4-Lo-W2K" detailTextLabel="kNL-56-8wR" style="IBUITableViewCellStyleSubtitle" id="17X-FT-Cai">
                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="17X-FT-Cai" id="qaN-BR-D6E">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qp4-Lo-W2K">
                                            <rect key="frame" x="15" y="6" width="31.5" height="19.5"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kNL-56-8wR">
                                            <rect key="frame" x="15" y="25.5" width="40.5" height="13.5"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="xS7-9y-nSW" id="4zb-Xw-THU"/>
                            <outlet property="delegate" destination="xS7-9y-nSW" id="VHQ-B1-BC4"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="ToDo List" id="U6l-ct-gSH">
                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="zLm-sN-qsg">
                            <connections>
                                <segue destination="Uv1-GK-tfJ" kind="show" id="CXB-bd-thM"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="UvT-fx-mbA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="108" y="277"/>
        </scene>
        <!--New ToDo List Item-->
        <scene sceneID="8ds-Vk-v4K">
            <objects>
                <viewController title="New ToDo List Item" id="Uv1-GK-tfJ" customClass="ComposeViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ekG-Ko-Cxd"/>
                        <viewControllerLayoutGuide type="bottom" id="wMk-ge-Cct"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kqI-1F-31q">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What do you need to do?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dNY-8a-9dK">
                                <rect key="frame" x="165" y="107" width="271" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Dol-Em-qeO"/>
                                    <constraint firstAttribute="width" constant="271" id="req-ya-etE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="dNY-8a-9dK" firstAttribute="top" secondItem="ekG-Ko-Cxd" secondAttribute="bottom" constant="43" id="qxL-uO-axF"/>
                            <constraint firstItem="dNY-8a-9dK" firstAttribute="centerX" secondItem="kqI-1F-31q" secondAttribute="centerX" id="tvu-3s-U00"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="8np-Dl-Ire">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="JGd-nU-svr">
                            <connections>
                                <action selector="saveButtonTapped" destination="Uv1-GK-tfJ" id="UEh-4Z-jzm"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="textField" destination="dNY-8a-9dK" id="fOf-7x-F5x"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ULQ-Gh-Q2m" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="880" y="277"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="bLW-f0-u30">
            <objects>
                <navigationController id="QPr-o7-d5y" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MP8-Co-bTe">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="xS7-9y-nSW" kind="relationship" relationship="rootViewController" id="AdE-OZ-pSm"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lrK-mk-Mpn" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-712" y="277"/>
        </scene>
    </scenes>
</document>
